problems/bad_path-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bad-path-service
spec:
  type: NodePort
  selector:
    app: bad-path
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30014
