problems/beginners_shell-service.yml
apiVersion: v1
kind: Service
metadata:
  name: beginners-shell-service
spec:
  selector:
    app: beginners-shell
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 9002
