problems/pinzoro-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pinzoro-service
spec:
  type: NodePort
  selector:
    app: pinzoro
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
    nodePort: 30000
