problems/what_is_include-service.yml
apiVersion: v1
kind: Service
metadata:
  name: what-is-include-service
spec:
  type: NodePort
  selector:
    app: what-is-include
  ports:
  - protocol: TCP
    port: 22
    targetPort: 22
    nodePort: 30004
