problems/your_name-hidden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hidden
spec:
  selector:
    app: your-name-hidden
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
